feat : create & update room with picture done
