# presenter/handler/user_handler_http.go
@@ -6,8 +6,12 @@ import (
 	"e-meeting-api/pkg/util"
 	"e-meeting-api/presenter/model"
 	"e-meeting-api/presenter/response"
+	"fmt"
 	"net/http"
+	"os"
+	"path/filepath"
 	"strconv"
+	"strings"
 
 	"github.com/labstack/echo/v4"
 )
@@ -113,11 +117,16 @@ func (h *userHandler) SaveUser(c echo.Context) error {
 // @Summary Update user by id
 // @Description Memperbarui User berdasarkan id
 // @Tags User
-// @Accept json
+// @Accept multipart/form-data
 // @Produce json
 // @Security ApiKeyAuth
 // @Param id path int true "User ID"
-// @Param user body model.UpdateUserRequest true "Update User Request"
+// @Param username formData string false "Username"
+// @Param email formData string false "Email"
+// @Param password formData string false "Password"
+// @Param isAdmin formData string false "IsAdmin"
+// @Param isActive formData string false "IsActive"
+// @Param image formData file false "User Image"
 // @Success 200 {object} response.APIResponse
 // @Failure 400 {object} response.APIResponse
 // @Failure 404 {object} response.APIResponse
@@ -125,7 +134,7 @@ func (h *userHandler) SaveUser(c echo.Context) error {
 // @Router /users/{id} [put]
 func (h *userHandler) UpdateUser(c echo.Context) error {
 	// Ambil user_id dari token (context middleware)
-	tokenUserID, ok := c.Get("user_id").(float64) // JWT claims biasanya float64
+	tokenUserID, ok := c.Get("user_id").(float64)
 	if !ok {
 		return c.JSON(http.StatusUnauthorized, response.UnauthorizedResponse("invalid token claims"))
 	}
@@ -143,8 +152,17 @@ func (h *userHandler) UpdateUser(c echo.Context) error {
 	if tokenUserIDInt != id {
 		return c.JSON(http.StatusForbidden, response.ForbiddenResponse("invalid access"))
 	}
+	oldUser, err := h.useCase.GetUser(context.Background(), id)
+	if err != nil {
+		return c.JSON(http.StatusNotFound, response.NotFoundResponse("user not found"))
+	}
 
 	user := &model.UpdateUserRequest{}
+
+	user.Username = c.FormValue("username")
+	user.Email = c.FormValue("email")
+	user.Password = c.FormValue("password")
+	user.ImgUrl = c.FormValue("imgUrl")
 
 	if err := c.Bind(user); err != nil {
 		return c.JSON(http.StatusBadRequest, response.BadRequestResponse("invalid request data"))
@@ -160,12 +178,57 @@ func (h *userHandler) UpdateUser(c echo.Context) error {
 
 	user.Password = hashedPassword
 
-	err = h.useCase.UpdateUser(context.Background(), id, user)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError, response.ErrorResponse("internal server error", http.StatusInternalServerError))
+	file, err := c.FormFile("image")
+	if err == nil {
+
+		src, err := file.Open()
+		if err != nil {
+			return c.JSON(http.StatusBadRequest, response.BadRequestResponse("failed to open file"))
+		}
+		defer src.Close()
+
+		// Validasi file gambar
+		isValid, err := util.ValidateImageFile(src)
+		if !isValid {
+			return c.JSON(http.StatusBadRequest, response.BadRequestResponse(err.Error()))
+		}
+
+		src.Seek(0, 0)
+		// Jika file ada, proses upload
+		ext := filepath.Ext(file.Filename)
+		randomFileName := util.GenerateRandomString(25) + ext
+		uploadPath := "public/photos/" + randomFileName
+
+		err = util.SaveUploadedFile(file, uploadPath)
+		if err != nil {
+			return c.JSON(http.StatusInternalServerError, response.InternalServerErrorResponse("failed to upload image"))
+		}
+
+		if oldUser.ImgUrl != "" {
+			oldFilePath := strings.Replace(oldUser.ImgUrl, os.Getenv("BASE_URL")+"/photos/", "public/photos/", 1)
+			if err := os.Remove(oldFilePath); err != nil {
+				fmt.Println("Failed to delete old file:", err)
+			}
+		}
+
+		baseURL := os.Getenv("BASE_URL")
+		imgUrl := baseURL + "/photos/" + randomFileName
+		user.ImgUrl = imgUrl
+	} else {
+		// Jika tidak ada file, gunakan gambar lama dari database
+		existingUser, err := h.useCase.GetUser(c.Request().Context(), id)
+		if err != nil {
+			return c.JSON(http.StatusInternalServerError, response.InternalServerErrorResponse("failed to retrieve existing room details"))
+		}
+		user.ImgUrl = existingUser.ImgUrl
 	}
 
-	updatedUser, err := h.useCase.GetUser(context.Background(), id) // Fetch the updated user from DB
+	err = h.useCase.UpdateUser(context.Background(), id, user)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, response.ErrorResponse(err.Error(), http.StatusInternalServerError))
+	}
+
+	updatedUser, err := h.useCase.GetUser(context.Background(), id)
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, response.ErrorResponse("error fetching user", http.StatusInternalServerError))
 	}
